--- a/webroot/css/back/styles.css
+++ b/webroot/css/back/styles.css
@@ -743,6 +743,7 @@ div.novisible {
   min-height: inherit;
 }
 .large_container section.section div.container {
+  position: relative;
   background-color: #FFFFFF;
   width: 100%;
   -moz-box-sizing: border-box;
@@ -779,40 +780,60 @@ div.container_template {
   height: calc(100vh - 65px);
 }
 
-div.list_tempate {
+div.list_template {
   padding: 0 20px !important;
 }
-div.list_tempate > ul {
+div.list_template > ul {
   width: 100%;
 }
-div.list_tempate > ul > li {
+div.list_template > ul > li {
   height: 170px;
   padding: 15px 0;
 }
-div.list_tempate > ul > li:not(:last-child) {
+div.list_template > ul > li:not(:last-child) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
-div.list_tempate > ul li > div {
+div.list_template > ul li > div {
   height: 100%;
 }
-div.list_tempate > ul li div.col_template_thumbs {
+div.list_template > ul li div.col_template_thumbs {
   margin-right: 15px;
 }
-div.list_tempate > ul li div.col_template_thumbs img {
+div.list_template > ul li div.col_template_thumbs img {
   display: block;
 }
-div.list_tempate > ul li div.col_template_descr > p.title_template {
+div.list_template > ul li div.col_template_descr > p.title_row span {
   font-size: 21px;
   color: #FF3B49;
   font-family: 'bariolbold', 'Helvetica';
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
 }
-div.list_tempate > ul li div.col_template_descr > div.info_template {
+div.list_template > ul li div.col_template_descr > p.title_row i {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  font-size: 20px;
+  color: #444;
+  cursor: pointer;
+}
+div.list_template > ul li div.col_template_descr > div.info_template {
   padding: 15px 0;
 }
-div.list_tempate > ul li div.col_template_descr > div.info_template p {
+div.list_template > ul li div.col_template_descr > div.info_template p {
   line-height: 23px;
 }
-div.list_tempate > ul li div.col_template_descr > div.info_template i {
+div.list_template > ul li div.col_template_descr > div.info_template i {
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
@@ -820,21 +841,21 @@ div.list_tempate > ul li div.col_template_descr > div.info_template i {
   *display: inline;
   color: #444;
 }
-div.list_tempate > ul li div.row_actions_template button {
+div.list_template > ul li div.row_actions_template button {
   height: 30px;
   font-size: 15px;
   min-width: auto;
   margin: 0 0 10px 0;
 }
-div.list_tempate > ul li div.row_actions_template button:last-child {
+div.list_template > ul li div.row_actions_template button:last-child {
   min-width: 40px;
   margin-left: 0;
 }
-div.list_tempate > ul li div.row_actions_template button:last-child i {
+div.list_template > ul li div.row_actions_template button:last-child i {
   margin-top: 3px;
   font-size: 21px;
 }
-div.list_tempate > ul div.popup_action_template {
+div.list_template > ul div.popup_action_template {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
   opacity: 0.9;
   width: 185px;
@@ -852,13 +873,13 @@ div.list_tempate > ul div.popup_action_template {
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
-div.list_tempate > ul div.popup_action_template ul {
+div.list_template > ul div.popup_action_template ul {
   height: 100%;
   visibility: hidden;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
-div.list_tempate > ul div.popup_action_template ul li {
+div.list_template > ul div.popup_action_template ul li {
   cursor: pointer;
   color: #fff;
   width: 100%;
@@ -868,12 +889,61 @@ div.list_tempate > ul div.popup_action_template ul li {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-div.list_tempate > ul div.popup_action_template ul li:not(:last-child) {
+div.list_template > ul div.popup_action_template ul li:not(:last-child) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   border-color: #fff;
 }
-div.list_tempate > ul div.popup_action_template ul li:hover {
+div.list_template > ul div.popup_action_template ul li:hover {
   background-color: #ff646f;
+}
+
+.popup_mc {
+  position: absolute;
+  width: 100%;
+  height: calc(100vh - 65px);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow-y: auto;
+  background-color: rgba(0, 0, 0, 0.75);
+  visibility: hidden;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -moz-transition: none 0.5s ease 0s;
+  -o-transition: none 0.5s ease 0s;
+  -webkit-transition: none 0.5s ease;
+  -webkit-transition-delay: 0s;
+  transition: none 0.5s ease 0s;
+  -moz-transition-property: visibility, opacity;
+  -o-transition-property: visibility, opacity;
+  -webkit-transition-property: visibility, opacity;
+  transition-property: visibility, opacity;
+}
+.popup_mc.active {
+  visibility: visible;
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+}
+.popup_mc > .popup_background {
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+}
+.popup_mc > .popup_container {
+  background: #f0f0f0;
+  position: absolute;
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 650px;
+  top: 50%;
+  left: 50%;
+  height: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /*----------  Popup Default  ----------*/
